<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary20"
    tools:context=".Activity_ex1">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="324dp"
        android:layout_height="630dp"
        android:contentDescription="@string/fundo_de_interface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_light" />

    <EditText
        android:id="@+id/ET_valora"
        android:layout_width="289dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_um_numero"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toTopOf="@+id/ET_valorb"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.254" />

    <EditText
        android:id="@+id/ET_valorb"
        android:layout_width="291dp"
        android:layout_height="67dp"
        android:layout_marginTop="112dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_outro_numero"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_resultado"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_resultado"
        android:layout_width="147dp"
        android:layout_height="72dp"
        android:onClick="vmultiplo"
        android:text="@string/resultado"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ET_resultado"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.864" />

    <EditText
        android:id="@+id/ET_resultado"
        android:layout_width="291dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/resultado_aqui"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.514" />

    <VideoView
        android:id="@+id/video_view"
        android:layout_width="190dp"
        android:layout_height="141dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/ET_resultado"
        app:layout_constraintVertical_bias="0.818" />

    <TextView
        android:id="@+id/txt_video"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_video"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/video_view"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/ET_resultado"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>