<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary20"
    tools:context=".Activity_ex4">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="310dp"
        android:layout_height="632dp"
        android:contentDescription="@string/fundo_de_interface_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_light" />

    <EditText
        android:id="@+id/ET_hrentrada"
        android:layout_width="273dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/horario_de_entrada"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_horario_saida"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.452" />

    <EditText
        android:id="@+id/ET_hrsaida"
        android:layout_width="268dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/horario_de_saida"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_horario_saida"
        android:layout_width="182dp"
        android:layout_height="87dp"
        android:backgroundTint="@color/material_dynamic_primary30"
        android:text="@string/mostrar_horario_saida"
        android:textColor="#EDEAEA"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ET_hrsaida"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.69" />

</androidx.constraintlayout.widget.ConstraintLayout>